Bug Fix | Action buttons circles squish down

--- a/src/components/button/_style-action.scss
+++ b/src/components/button/_style-action.scss
@@ -21,6 +21,7 @@
         margin-right: 0.65em;
         font-family: wsu-icons;
         font-size: 0.8em;
+        flex-shrink: 0;
     }
 
     &:hover,
